--- a/css/styles.css
+++ b/css/styles.css
@@ -1,226 +1,60 @@
 :root {
   --color-primary: #212121;
-  --color-brand: #757575;
-  --color-accent: #2196f3;
+  --color-secondary: #434455;
+  --color-accent: #404bbf;
+  --color-subtitle-background: #e7e9fc;
+  --color-dark: #2e2f42;
   --color-inverted: #fefefe;
   --color-white: #ffffff;
-  --color-background: #2f303a;
-  --color-filtres: #f5f4fa;
+  --color-background: #2e2f42;
+  --color-filtres: #f5f4fd;
+  --button: #4d5ae5;
+  --border: #000;
+  --shadow: rgba(0, 0, 0, 0.25);
 }
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
-  color: var(--color-primary);
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 700;
+  color: var(--color-dark);
+  background-color: var(--color-white);
+  font-family: "Roboto", sans-serif;
 }
 
-/* Logo */
-
-.logo-accent {
-  color: var(--color-accent);
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 26px;
-  background-color: #ffffff;
-  text-decoration: none;
+ul {
+  list-style-type: none;
 }
 
-.logo-accentS {
-  color: var(--color-accent);
-  font-weight: 500;
-  font-size: 14px;
-  background-color: #ffffff;
-  text-decoration: none;
+h1 h2 h3 h4 h5 h6 p {
+  margin: 0;
+  padding: 0;
 }
 
-.logo-accent-second {
-  color: var(--color-primary);
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 26px;
-  background-color: #ffffff;
-  text-decoration: none;
+p {
+  padding: 0;
+  margin: 0;
 }
 
-.logo-footer {
-  color: var(--color-accent);
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 26px;
-  background-color: var(--color-background);
-  text-decoration: none;
+img {
+  display: block;
+  margin: 0;
+  padding: 0;
 }
 
-.logo-footer-second {
-  color: var(--color-white);
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 26px;
-  background-color: var(--color-background);
-  text-decoration: none;
+.container {
+  width: 1158px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
 }
-
-/* Link */
-
-.link-current {
-  color: var(--color-accent);
-  font-weight: 500;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.link {
-  color: var(--color-primary);
-  font-weight: 500;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.linknav {
-  color: var(--color-brand);
-  font-weight: 500;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.link:hover {
-  color: var(--color-accent);
-}
-
-.linknav:hover {
-  color: var(--color-accent);
-}
-
-.link-adress {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.link-contacts {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: #757575;
-  text-decoration: none;
-}
-
-.link-contacts:hover {
-  color: var(--color-accent);
-}
-
-/* Button */
-
-.primary-button {
-  color: var(--color-white);
-  font-family: inherit;
-  width: 216px;
-  height: 50px;
-  left: 692px;
-  top: 430px;
-  background-color: var(--color-accent);
-  cursor: pointer;
-}
-
-.primary-button:hover {
-  color: var(--color-white);
-  background-color: var(--color-accent);
-  visibility: hidden;
-}
-
-.portfolio-button-all {
-  color: var(--color-white);
-  font-family: inherit;
-  width: 73px;
-  height: 38px;
-  left: 512px;
-  top: 174px;
-  background-color: var(--color-accent);
-  cursor: pointer;
-}
-
-.portfolio-button-web {
-  color: var(--color-primary);
-  font-family: inherit;
-  width: 125px;
-  height: 38px;
-  left: 593px;
-  top: 174px;
-  background-color: var(--color-filtres);
-  cursor: pointer;
-}
-
-.portfolio-button-app {
-  color: var(--color-primary);
-  font-family: inherit;
-  width: 112px;
-  height: 38px;
-  left: 726px;
-  top: 174px;
-  background-color: var(--color-filtres);
-  cursor: pointer;
-}
-
-.portfolio-button-dis {
-  color: var(--color-primary);
-  font-family: inherit;
-  width: 103px;
-  height: 38px;
-  left: 846px;
-  top: 174px;
-  background-color: var(--color-filtres);
-  cursor: pointer;
-}
-
-.portfolio-button-mar {
-  color: var(--color-primary);
-  font-family: inherit;
-  width: 130px;
-  height: 38px;
-  left: 957px;
-  top: 174px;
-  background-color: var(--color-filtres);
-  cursor: pointer;
-}
-
-.portfolio-button-web:hover {
-  color: var(--color-white);
-  background-color: var(--color-accent);
-}
-
-.portfolio-button-app:hover {
-  color: var(--color-white);
-  background-color: var(--color-accent);
-}
-
-.portfolio-button-dis:hover {
-  color: var(--color-white);
-  background-color: var(--color-accent);
-}
-
-.portfolio-button-mar:hover {
-  color: var(--color-white);
-  background-color: var(--color-accent);
-}
-
-/* Hero section */
-
-.hero-title {
-  color: var(--color-white);
-  text-transform: uppercase;
-  line-height: 60px;
-  font-weight: 900;
-  font-size: 44px;
-  background-color: var(--color-background);
-}
-
-/* Advantages section */
 
 .visually-hidden {
   position: absolute;
@@ -235,69 +69,486 @@ body {
   margin: -1px;
 }
 
-.advantage-card {
-  color: inherit;
+/* header */
+.header {
+  background-color: var(--basic-bcg-color);
+}
+.header-box {
+  display: flex;
+}
+.site-nav {
+  display: flex;
+  gap: 40px;
+  margin-left: 76px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.nav-link {
+  color: #2e2f42;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.3;
+  letter-spacing: 0.02em;
+}
+.nav-link:hover,
+.nav-link:focus {
+  color: #404bbf;
+}
+.site-contacts {
+  display: flex;
+  gap: 40px;
+  margin-left: auto;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.contacts-link {
+  color: #434455;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.contacts-link:hover,
+.contacts-link:focus {
+  color: #404bbf;
+}
+
+/* Logo */
+
+.logo-web {
+  color: var(--color-accent);
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.logo-studio {
+  color: #2e2f42;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.logo-footer {
+  color: var(--color-accent);
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  background-color: var(--color-background);
   text-decoration: none;
-  text-transform: uppercase;
+}
+
+.logo-footer-second {
+  color: var(--color-white);
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  background-color: var(--color-background);
+  text-decoration: none;
+}
+
+/* Link */
+
+.link-current {
+  color: var(--color-accent);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.nav-list {
+  display: flex;
+  gap: 40px;
+  margin-left: 76px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.link-current {
+  color: var(--color-accent);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  text-decoration: none;
+  padding: 0px;
+  gap: 40px;
+  display: flex;
+}
+
+.contact {
+  display: flex;
+  gap: 40px;
+  margin-left: auto;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.linknav {
+  color: var(--color-secondary);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: var(--color-accent);
+}
+
+.linknav:hover {
+  color: var(--color-accent);
+}
+
+.link-current:hover {
+  color: var(--color-accent);
+}
+
+.link:focus {
+  color: var(--color-accent);
+}
+
+.linknav:focus {
+  color: var(--color-accent);
+}
+
+.link-current:focus {
+  color: var(--color-accent);
+}
+
+.link-adress {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--color-white);
+  text-decoration: none;
+}
+
+.link-contacts {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: var(--color-secondary);
+  text-decoration: none;
+}
+
+.link-contacts:hover {
+  color: var(--color-accent);
+}
+
+.link-contacts:focus {
+  color: var(--color-accent);
+}
+
+/* Button */
+
+.primary-button {
+  background-color: var(--button);
+  color: var(--color-white);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  font-family: inherit;
+
+  display: block;
+  padding: 16px 32px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  margin: 0 auto;
+}
+
+.primary-button:hover {
+  background-color: var(--button);
+}
+
+.primary-button:focus {
+  background-color: var(--color-accent);
+}
+
+.pic {
+  list-style: none;
+  padding-bottom: 94px;
+  margin: 0;
+}
+
+.pic-list {
+  display: flex;
+  gap: 30px;
+}
+
+.pic-title {
+  margin-top: 0;
+  margin-bottom: 72px;
+  color: var(--color-dark);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+  letter-spacing: 0.02em;
+}
+
+.main-section {
+  padding-top: 96px;
+}
+
+.button.list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  margin-bottom: 72px;
+}
+
+.portfolio-button-all {
+  background-color: var(--color-subtitle-background);
+  color: var(--button);
+  font-family: inherit;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding: 6px 22px;
+}
+
+.portfolio-button-all:hover {
+  color: var(--color-white);
+  background: var(--color-accent);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.portfolio-button-all:focus {
+  color: var(--color-white);
+  background: var(--color-accent);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+/* Hero section */
+
+.feature {
+  list-style: none;
+  padding: 94px 0;
+  margin: 0;
+}
+
+.hero {
+  text-align: center;
+  background-color: var(--color-background);
+  padding: 188px 0;
+}
+
+.hero-title {
+  margin: 0 auto;
+  margin-bottom: 48px;
+  color: var(--color-white);
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+
+  text-align: center;
+}
+
+/* Advantages section */
+
+.advantage-card {
+  margin: 0;
+  padding-bottom: 0;
+  display: flex;
+  gap: 30px;
 }
 
 .advantage-card-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #212121;
+  display: flex;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  padding-top: 0;
+  margin-bottom: 8px;
+  max-height: 24px;
 }
 
 .advantage-card-text {
-  font-weight: 400;
+  margin: 0;
+  display: flex;
   font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.03em;
-  color: #757575;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-secondary);
 }
 
-.team-card-title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 19px;
-  letter-spacing: 0.03em;
-  color: #212121;
+.team {
+  background-color: var(--color-filtres);
+  padding: 120px 0;
 }
 
-.team-card-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  letter-spacing: 0.03em;
-  color: #757575;
-  background: #f5f4fa;
+.team-card {
+  width: 264px;
+  height: 380px;
+  left: 156px;
+  top: 1780px;
+  background-color: var(--color-white);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
-.portfolio-card-title {
+.team-title {
+  color: var(--color-dark);
   font-weight: 700;
-  font-size: 18px;
-  line-height: 36px;
-  letter-spacing: 0.06em;
-  color: #212121;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: none;
+  margin: 0 auto 72px;
+  letter-spacing: 0.02em;
 }
 
-.portfolio-card-text {
+.team-list {
+  list-style: none;
+  display: flex;
+  gap: 24px;
+  margin-bottom: 0;
+}
+
+.team-worker {
+  background-color: var(--color-white);
+  margin-top: 32px;
+  color: var(--color-dark);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.team-job {
+  background-color: var(--color-white);
+  color: var(--color-secondary);
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+
+.portfolio.list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+  margin-bottom: 120px;
+}
+
+.portfolio-box {
+  padding: 32px 0;
+}
+
+.list.link {
+  text-decoration: none;
+}
+
+.portfolio.container {
+  padding: 32px 0;
+}
+
+.list link {
+  text-decoration: none;
+}
+
+.portfolio-title {
+  margin-top: 0;
+  margin-bottom: 8px;
+  color: #2e2f42;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.portfolio.product {
+  color: #434455;
+  font-family: "Roboto";
+  font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.03em;
-  color: #757575;
-  background: #f5f4fa;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 /* Other */
 
 .footer {
-  background: #2f303a;
+  background: var(--color-background);
+  padding: 100px 0;
+}
+
+.logo {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin: 0;
+}
+
+.logo-footer {
+  color: var(--color-accent);
+  text-decoration: none;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  line-height: 1.17;
+  margin-top: 100px;
+  text-transform: uppercase;
+}
+
+.logo-footer-second {
+  color: var(--color-white);
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  line-height: 1.17;
+  margin-top: 100px;
+  text-transform: uppercase;
 }
 
 ul {
   list-style-type: none;
+}
+
+.footer_text {
+  margin-top: 16px;
+  color: var(--color-subtitle-background);
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 9px;
 }
